<resources>

    <!--StartActivity Strings-->
    <string name="app_name">BABL</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="pittEmail">"@"Pitt.edu</string>
    <string name="WhatIs">BABL is an app designed to help University of Pittsburgh students of all campuses connect with and meet new people.
        It\'s core functionality is based around people that speak or are learning to speak another language discover someone else that also speaks that language.
    </string>
    <string name="incorrectPass">Username or Password Incorrect</string>
    <string name="verifyinglogin">Verifying Login and Retrieving Data</string>
    <string name="loginverified">Login Verified</string>
    <string name="userdataretireve">User Data Retrieved</string>
    <string name="updatingmatches">Updating Matches</string>
    <string name="done">Done</string>

    <!--RegisterActivity Strings-->
    <string name="NewUser">New User</string>
    <string name="username">Username</string>
    <string name="FirstName">First Name</string>
    <string name="passConfirm">Confirm</string>
    <string name="Languages">Add Languages</string>
    <string name="langDesc">Add Languages to the List that you speak, or are learning to speak.</string>
    <string name="Campus">Select Campus</string>
    <string name="literalcampus">campus</string>
    <string name="campusAttend">First, which campus are you currently attending.</string>
    <string name="campusSelect">Next, select which campuses you would like to meet someone from.</string>
    <string name="maxLang">You can only have 5 Languages</string>
    <string name="NothingSelected">Nothing Selected</string>
    <string name="AddFacebook">Link Facebook</string>
    <string name="AddFacebookDesc">Connect with Facebook to become friends with and chat with people that you meet.</string>
    <string name="NewUserSubmit">Submit</string>
    <string name="FieldCantEmpty">Field Cannot be Empty</string>
    <string name="Pittsburgh">Pittsburgh</string>
    <string name="Johnstown">Johnstown</string>
    <string name="Bradford">Bradford</string>
    <string name="Titusville">Titusville</string>
    <string name="Greensburg">Greensburg</string>
    <string name="passwordmatch">Password do not match.</string>
    <string name="campusselectblank">Please select a campus.</string>
    <string name="nocampuschecked">Please select at least one campus to find someone at.</string>
    <string name="nolanguageselected">Please select at least one language.</string>
    <string name="facebooksuccess">Facebook Linked!</string>
    <string name="connectfacebook">Please Connect with Facebook to Continue.</string>


    <string-array name="LanguagesArray">
        <item>English</item>
        <item>Japanese</item>
        <item>German</item>
        <item>Mandarin</item>
        <item>Cantonese</item>
        <item>Korean</item>
        <item>Russian</item>
        <item>Latin</item>
        <item>Albanian</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Belarusian</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>Esperanto</item>
        <item>Estonian</item>
        <item>Filipino</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Georgian</item>
        <item>Greek</item>
        <item>Hawaiian</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Javanese</item>
        <item>Lao</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Mongolian</item>
        <item>Portuguese</item>
        <item>Polish</item>
        <item>Persian</item>
        <item>Norwegian</item>
        <item>Spanish</item>
        <item>Turkish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
        <item>Ukrainian</item>
        <item>Welsh</item>


    </string-array>
    <string name="facebook_app_id">1752316158322312</string>


    <!--MainActivity Strings-->
    <string name="Welcome">Welcome</string>
    <string name="ActionPhrase">What would you like to do?</string>
    <string name="FindMatches">Find Matches</string>
    <string name="ViewMatches">View Matches</string>
    <string name="Or">Or</string>
    <string name="EditAccountSettings">Edit Account Settings</string>
    <string name="Logout">Logout</string>
    <string name="logoutsucceess">Fully Logged Out</string>
    <string name="loginsuccess">Successfully Logged In</string>
    <string name="UserDataRetrieved">User Data Retrieved Successfully</string>

    <!--SettingsActivity Strings -->
    <string name="accountsettings">Account Settings</string>
    <string name="settingschangelang">Change Languages</string>
    <string name="settingschangelangdesc">Here you can change the languages that you would like to meet people from.</string>
    <string name="settingschangecampus">Change Campus</string>
    <string name="settingschangecampusdesc">Here you can change the campus you are currently attending</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="title_activity_confirmed_matches">ConfirmedMatches</string>
    <!--Matches Acitvity Strings -->
    <string name="findonFacebook">Find on Facebook</string>
    <string name="nomatches">No matches right now, try again later</string>
    <string name="pleasewait">Please wait while we find another match.</string>
    <string name="speaks">Speaks:</string>
    <string name="findingmatches">Finding Matches</string>
</resources>


