<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="net.joelaustin.bablproject.MainActivity"
    android:windowSoftInputMode="stateVisible">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@drawable/bradfordsign"
                android:id="@+id/imgMain"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:scaleType="fitXY"/>

            <TextView
                android:text="@string/Welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txvWelcome"
                android:gravity="center"
                android:textSize="@dimen/title_font_size"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal|bold|italic"
                android:layout_marginTop="127dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <TextView
                    android:text="@string/ActionPhrase"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txvActionPhrase"
                    android:gravity="center"
                    android:textSize="@dimen/login_font_size"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <Button
                android:text="@string/FindMatches"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textSize="@dimen/login_font_size"
                android:textStyle="normal|bold|italic"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/btnMatches"
                android:background="@drawable/rounded_button"
                android:onClick="btnFindMatchesOnClick"
            />

            <Button
                android:id="@+id/btnViewMatches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:onClick="btnViewMatchesOnClick"
                android:text="@string/ViewMatches"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/login_font_size"
                android:textStyle="normal|bold|italic" />

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:text="@string/Or"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:id="@+id/txvOr"
                android:gravity="center"
                android:textSize="@dimen/login_font_size"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
        <Button
            android:text="@string/EditAccountSettings"
            android:layout_width="match_parent"
            android:textSize="@dimen/login_font_size"
            android:textStyle="normal|bold|italic"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:id="@+id/btnAccountSettings"
            android:onClick="btnAccountSettingsOnClick"
            android:background="@drawable/rounded_button"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/Logout"
                android:layout_width="match_parent"
                android:textSize="@dimen/login_font_size"
                android:onClick="btnLogoutOnClick"
                android:textStyle="normal|bold|italic"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:id="@+id/btnMainActivityLogout"
                android:background="@drawable/rounded_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
